2008-06-28 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file_itunesdb.c
	  src/display_photo.c
	  src/display_photo.h: don't display error message about
	  non-available photodb if iPod does not support photos.

2008-05-31  Todd Zullinger <tmzullinger at users.sourceforge.net>

	* po/POTFILES.in: update file list to keep distcheck happy

	* data/icons/hicolor/16x16/places/Makefile.am
	  data/icons/hicolor/16x16/status/Makefile.am
	  data/icons/hicolor/22x22/places/Makefile.am
	  data/icons/hicolor/24x24/places/Makefile.am
	  data/icons/hicolor/32x32/places/Makefile.am
	  data/icons/hicolor/48x48/places/Makefile.am
	  data/icons/hicolor/scalable/places/Makefile.am
	  data/man/Makefile.am
	  doc/Makefile.am: minor distcheck fixes

2008-05-31 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/details.c (details_update_thumbnail): fix bug that prevented
	  displaying thumbnails in the edit details window that were saved
	  on the iPod.

2008-05-31 P.G. Richardson <phantom_sf at users.sourceforge.net>

  * context_menus.c
  
    Added coverart update call to eject ipod action.
    
  * display_coverart.c
  * display_covarart.h
  
    Tidied up function doc comments.
    Ensured when no playlist is selected, coverart_display_update 
    clears the artwork display.

2008-05-30  Christophe Fergeau  <teuf at gnome.org>

	* src/details.c:
	* src/display_coverart.c:
	* src/display_itdb.c:
	* src/display_photo.c:
	* src/file.c:
	* src/file_itunesdb.c:
	* src/misc_track.c: adjust to libgpod API changes (use
	itdb_track_has_thumbnail and itdb_track_get_thumbnail instead of using
	deprecated API and struct members)

2008-05-29 P.G. Richardson <phantom_sf at users.sourceforge.net>

  * src/fetchcover.c

    Fix for incorrect creation of jpg filenames
    
2008-05-29 P.G. Richardson <phantom_sf at users.sourceforge.net>

  * src/display_photo.c

    Fix for pixbufs not being unreference in display_photo.c
    
2008-05-24 Jorg Schuler <jcsjcs at users.sourceforge.net>
